# oncobridge-ai-tp-final

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
colab/: generate_reference_images.ipynb
data/dataset_clinical_only/: README.md
data/dataset_clinical_only/dataset/: index.json
evaluation/results/: batch_results.json  metrics_report.txt  specialist_feedback.json
scripts/: collect_specialist_feedback.py  generate_reference_images.py  run_case.py  run_component1.py  run_component2.py  run_e2e.py  run_evaluation.py  test_llm_connection.py
src/oncobridge/: config.py
src/oncobridge/component1/: history_summarizer.py  pipeline.py  probability_engine.py  reasoning_engine.py
src/oncobridge/component2/: image_synthesizer.py  pipeline.py  reasoning_engine.py
src/oncobridge/evaluation/: metrics_component1.py  metrics_component2.py  metrics_integrado.py  specialist_feedback.py
src/oncobridge/ingestion/: embeddings_index.py  gt_loader.py
src/oncobridge/llm/: client.py  token_tracker.py
src/oncobridge/rag/: compressor.py  retriever.py
src/oncobridge/ui/: app.py  (+3 more)
tests/: test_component2_classification.py  test_component2_reasoning_engine.py  test_compressor.py  test_gt_loader.py  test_history_summarizer.py  test_image_synthesizer.py  test_metrics_component1.py  test_metrics_component2.py  test_metrics_integrado.py  test_pipeline_component1.py  test_pipeline_component2.py  test_probability_engine.py  test_reasoning_engine.py  test_retriever.py  test_schemas.py  test_specialist_feedback.py  test_ui_data_access.py
(+267 files in other folders)
